--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,19 @@
         </activity>
         <activity
             android:name=".MorviFinderActivity"
-            android:label="@string/app_name"
+            android:label="@string/morvi_finder_activity"
             android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".ControllerActivity"
+            android:label="@string/controller_activity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/action_settings"
             android:screenOrientation="portrait" >
         </activity>
     </application>
